# lede

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 801d5874ad59_create_design_v1_1_schema.py  edf53ce1637a_add_dead_letters_table.py
app/: config.py  keywords.py  logging_config.py  main.py  reading_time.py  retry.py  scheduler.py  seed.py  text.py  worker.py
app/collect/: hashing.py  repository.py  rss.py  service.py
app/db/: base.py  models.py  session.py
app/deadletter/: repository.py  router.py  schema.py
app/digest/: repository.py  service.py
app/email/: factory.py  sender.py
app/email/senders/: fake.py
app/embedding/: factory.py  provider.py
app/embedding/providers/: fake.py  ollama.py
app/interests/: repository.py  router.py  schema.py
app/llm/: factory.py  provider.py  schema.py
app/llm/providers/: anthropic.py  fake.py  ollama.py
app/scoring/: cosine.py  jaccard.py  service.py
app/summarize/: repository.py  service.py
docs/: DESIGN.md  OLLAMA.md  PROJECT_PLAN.md  lede_interest_score.md
tests/: conftest.py  test_anthropic_provider.py  test_cosine.py  test_deadletter.py  test_digest.py  test_embedding_provider.py  test_health.py  test_interests.py  test_keywords.py  test_logging.py  test_ollama_provider.py  test_pipeline.py  test_rss.py  test_scoring.py  test_summarize.py
tests/integration/: test_db_digest_dlq.py  test_db_idempotency.py
